--- a/.xsessionrc
+++ b/.xsessionrc
@@ -1,5 +1,9 @@
+# enable horizontal and vertical scrolling using middle button
 xinput --set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation" 1
 xinput --set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Button" 2
 xinput --set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Timeout" 200
 xinput --set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Axes" 8 6 7 4 5
+
+# disable touchpad
+xinput --set-prop "SynPS/2 Synaptics TouchPad" "Device Enabled" 0
 
